opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-syslog-rfc5424"
bug-reports: "https://github.com/vbmithr/ocaml-syslog-rfc5424/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-syslog-rfc5424"
doc: "https://vbmithr.github.io/ocaml-syslog-rfc5424/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "uint" {>= "2.0.1"}
  "rresult" {>= "0.6.0"}
  "logs" {>= "0.7.0"}
  "syslog-message" {>= "1.1.0"}
  "ptime" {>= "0.8.5"}
  "tyre" {>= "0.4.1"}
]
synopsis: "RFC5424."
description: """
"""
